<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="3dp"
        android:paddingBottom="6dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/list_item"
            android:orientation="vertical"
            android:elevation="5dp"
            android:padding="5dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:elevation="10dp"
                android:clipToPadding="false"
                android:id="@+id/list_item_information"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/list_item_text"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/list_item_name"
                        android:text="@string/placeholder_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/list_item_description"
                        android:text="@string/placeholder_item_description"
                        android:layout_width="match_parent"
                        android:layout_height="48sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/list_item_local_price"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/list_item_local_currency"
                        android:layout_weight="0.7"
                        android:text="@string/placeholder_local_currency"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/list_item_rate"
                        android:layout_weight="0.3"
                        android:text="@string/placeholder_local_rate"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/list_item_default_price"
                    android:layout_weight="0.25"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/list_item_default_currency"
                        android:layout_weight="0.7"
                        android:text="@string/placeholder_default_currency"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/list_item_default_total"
                        android:layout_weight="0.3"
                        android:text="@string/placeholder_default_total"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/list_item_date_modified"
                    android:text="@string/placeholder_last_modified"
                    android:textSize="8sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>