<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/item_name"
                android:text="@string/placeholder_item_name"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_default_cost"
                android:layout_gravity="end"
                android:text="@string/placeholder_default_currency"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/item_local_cost"
                android:layout_gravity="end"
                android:text="@string/placeholder_local_currency"
                android:textColor="@color/gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/item_date_added"
        android:text="@string/placeholder_date_created"
        android:textSize="8sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_description"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>