<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="20dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/toolbar_close"
            android:src="@drawable/ic_close_black_18dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:transitionName="@string/transition_main_to_full_info"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/list_item_name"
            android:background="@color/colorPrimaryDark"
            android:padding="8dp"
            android:text="@string/placeholder_item_name"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="64dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="4dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <LinearLayout
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/list_item_local_currency"
                        android:text="@string/placeholder_local_currency"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/list_item_rate"
                            android:background="@color/white"
                            android:layout_gravity="center_vertical"
                            android:text="@string/placeholder_local_rate"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:background="@color/colorPrimaryDark"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:text="Total"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/list_item_default_total"
                            android:layout_gravity="center_vertical"
                            android:text="@string/placeholder_default_total"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:background="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/list_item_date_touched"
            android:background="@color/white"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:text="@string/placeholder_last_modified"
            android:textSize="8sp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>