<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:clipToPadding="false"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:background="@color/itemColorAccent"
            android:baselineAligned="false"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/itemColorAccent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">
                <LinearLayout
                    android:background="@color/itemColorAccent"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center">
                    <android.support.v7.widget.CardView
                        android:layout_margin="4dp"
                        android:background="@color/itemColorAccent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="4dp"
                        card_view:cardCornerRadius="8dp">
                        <ImageView
                            android:id="@+id/item_type_image"
                            android:background="@color/itemColorAccent"
                            android:src="@drawable/ic_check_black_36dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitCenter"
                            android:contentDescription="@null"/>
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/item_name"
                android:text="@string/placeholder_item_name"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="vertical"
                android:padding="4dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_default_cost"
                    android:layout_gravity="end"
                    android:text="@string/placeholder_default_currency"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/item_local_cost"
                    android:layout_gravity="end"
                    android:text="@string/placeholder_local_currency"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray" />

        <TextView
            android:id="@+id/item_description"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_date_added"
            android:text="@string/placeholder_date_created"
            android:textSize="8sp"
            android:paddingStart="2dp"
            android:paddingBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>